# llm_engineering_pg

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.sh  w1d4-brochure-generator.py  w1d4-memory.py
flagged/: log.csv
src/: __init__.py  w1d4-brochure-generator.py  w1d4-tokenizing.py  w1d4_memory.py  w2d1.py
week1/: __init__.py  litellm.py  litellm_example.py  w1d4_brochure_generator.py  w1d4_tokenizing.py
week2/: __init__.py  gradio_app.py
