[project]
name = "llm-engineering-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.0.0",
    "ipython>=8.18.1",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "scraper>=0.1.0",
    "tiktoken>=0.12.0",
]

[project.scripts]
start = "main:main"
